fixed alignments for mobile view 😴😴

--- a/webpack/sass/home.scss
+++ b/webpack/sass/home.scss
@@ -20,11 +20,24 @@
 
     &:hover .tooltip {
       opacity: 1;
+
+      @media screen and (max-width:600px){
+        opacity: 0;
+      }
     }
   }
 
   .hero-container {
-    padding: 250px 0px;
+    padding:250px 0px 0px 0px;
+
+    @media screen and (max-width:1024px) {
+      padding: calc(50vh - 200px) 0px;
+    }
+
+    @media screen and (max-width:600px) {
+       padding: calc(50vh - 130px) 0px;
+    }
+
   }
 
   .hero-title {
@@ -35,6 +48,17 @@
       line-height: 114px;
       font-weight: 600;
       font-style: normal;
+
+      @media screen and (max-width:1024px){
+        font-size: 62px;
+        line-height: 66px;
+      }
+
+      @media screen and (max-width:600px){
+        font-size: 42px;
+        line-height: 45px;
+      }
+
     }
   }
 
@@ -42,11 +66,24 @@
     width: 59%;
     margin-bottom: 20px;
 
+    @media screen and (max-width:1024px){
+      width: 80%;
+    }
+
+    @media screen and (max-width:600px){
+      width: 90%;
+    }
+
     p {
       font-size: 24px;
       line-height: 32px;
       font-weight: 400;
       font-style: normal;
+
+      @media screen and (max-width:600px){
+        font-size: 16px;
+        line-height: 25px;
+      }
     }
   }
 
