--- a/webpack/sass/resume.scss
+++ b/webpack/sass/resume.scss
@@ -1,38 +1,47 @@
-.resume{
-    padding: 20px 0px 50px 0px;
+.resume {
+  padding: 20px 0px 50px 0px;
+  background-color: transparent;
 
-    .flex{
-        flex-direction: column;
+  .flex {
+    flex-direction: column;
+  }
+
+  .resume-title {
+    h1 {
+      font-size: 50px;
+      line-height: 80px;
+      font-weight: 600;
+      @media screen and (max-width:600px){
+        font-size: 40px;
+        line-height: 48px;
+      }
     }
+  }
 
-    .resume-title{
-        h1{
-            font-size: 50px;
-            line-height: 80px;
-            font-weight: 600;
-        }
+  .resume-subtitle {
+    h2 {
+      font-size: 30px;
+      line-height: 60px;
+      font-weight: 600;
+
+      @media screen and (max-width:600px){
+        font-size: 24px;
+        line-height: 32px;
+        margin: 0.75rem 0px;
+      }
     }
+  }
 
-    .resume-subtitle{
+  .resume-content {
+    p {
+      font-size: 15px;
+      line-height: 32px;
+      font-weight: 800;
+      position: relative;
 
-        h2{
-            font-size: 30px;
-            line-height: 60px;
-            font-weight: 600;
-        }
+      span {
+        font-weight: 400;
+      }
     }
-
-    .resume-content{
-        p{
-            font-size: 15px;
-            line-height: 32px;
-            font-weight: 800;
-            position: relative;
-            transition: all 0.5s ease;
-
-            span {
-                font-weight: 400;
-            }
-        }
-    }
+  }
 }
